Makefile: clean-up, and generation of a .tds.zip.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Git ignore file for luainputenc.
-# Should be in sync with make's $(GENERATED).
+# See target 'mrproper' in Makefile.
 eu2enc.def
 eu2lmr.fd
 inputenc.sty.diff
@@ -9,3 +9,5 @@ luainputenc.pdf
 luainputenc.sty
 lutf8.def
 lutf8x.def
+luainputenc.zip
+luainputenc.tds.zip
